--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -13,6 +13,8 @@
       *{
         font-family: 'Source Sans Pro', sans-serif;
         margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
     </style>
   <title>Admin Dashboard</title>
